--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -3,7 +3,7 @@
 .card {
   position: relative;
   /* width: 100%; */
-  max-width: 29.5rem;
+  // max-width: 29.5rem;
   border-radius: 0.5rem;
   cursor: pointer;
   background-color: #fff;
@@ -13,8 +13,6 @@
 
   &__photo {
     width: 100%;
-    min-width: 29.5rem;
-    height: 20rem;
     object-fit: cover;
     border-radius: 0.4rem 0.4rem 0 0;
     @media (max-width: 320px) {
